--- a/ClientApp/app/components/app/app.component.html
+++ b/ClientApp/app/components/app/app.component.html
@@ -5,5 +5,6 @@
     <label>id: </label>{{hero.id}}
 </div>
 <div>
-    <label>name: </label>{{hero.name}}
+    <label>name: </label>
+    <input value="{{hero.name}}" placeholder="name" />
 </div>
